mb_Iac/root/modules/security_groups/main.tf
  terraform {
    required_providers {
      aws = {
        source  = "hashicorp/aws"
        version = "5.54.1"
      }
    }
  }

  /*------ bastion sg -----*/
  resource "aws_security_group" "mb_private_security_group" {
    vpc_id = var.vpc_id //module + module 명 + vpc/output 명

    ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      security_groups = [aws_security_group.mb_bastion_security_group.id]
    }

    ingress {
      from_port = 80
      to_port = 80
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
      from_port = 443
      to_port = 443
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
      from_port = 8083
      to_port   = 8083
      protocol  = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
      from_port = 3306
      to_port = 3306
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
      from_port = 1025
      to_port = 65535
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
      from_port = 0
      to_port = 0
      protocol = "-1" //모든 프로토콜 의미
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "mb_bastion_security_groups"
    }
  }
  /*-------------------*/

  /*------ private ec2 sg -----*/
  resource "aws_security_group" "mb_bastion_security_group" {
    vpc_id = var.vpc_id

    ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "mb_private_security_group"
    }
  }
  /*---------------------------*/

  /*----- RDS security group -----*/
  //추후 사용
  resource "aws_security_group" "mb_rds_security_group" {
    vpc_id = var.vpc_id

    ingress {
      from_port = 3306
      to_port = 3306
      protocol = "tcp"
      security_groups = [aws_security_group.mb_private_security_group.id]
    }

    egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }
  /*--------------------------------*/
